--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/method-override": "^0.0.31",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.10",
+    "@types/faker": "5.1.4",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
@@ -63,6 +64,7 @@
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "faker": "5.1.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.2",
